# reversibledict

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  reversibledict.py  setup.py
