[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reversibledict"
version = "0.2.0"
authors = [
  { name="Thomas Kober", email="tttthomasssss@gmail.com" },
]
description = "Dictionary with value-key lookup ability"
readme = "Readme.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/tttthomasssss/reversibledict"
"Bug Tracker" = "https://github.com/tttthomasssss/reversibledict/issues"